--- a/public/global.css
+++ b/public/global.css
@@ -1,14 +1,15 @@
 html, body {
 	position: relative;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
+	box-sizing: border-box;
 }
 
 body {
-	color: #333;
+	background: #456;
+	color: #fff;
 	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
+	padding: 0; 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
